CMAKE_MINIMUM_REQUIRED(VERSION 3.12)

PROJECT(game LANGUAGES CXX)

SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_VERBOSE_MAKEFILE ON)

IF (EMSCRIPTEN)
  SET(CMAKE_EXE_LINKER_FLAGS 
    "${CMAKE_EXE_LINKER_FLAGS} 
    -s USE_GLFW=3 
    -s ASSERTIONS=0 
    -s WASM=1 
    --preload-file ${CMAKE_CURRENT_SOURCE_DIR}/resources@resources 
    -s ALLOW_MEMORY_GROWTH 
    -s 'EXPORTED_FUNCTIONS=['_main', '_malloc', '_free']' 
    -s MIN_WEBGL_VERSION=2")

  SET(CMAKE_EXECUTABLE_SUFFIX ".js")
  SET(PLATFORM "Web")
ENDIF()

ADD_SUBDIRECTORY(src)
