CMAKE_MINIMUM_REQUIRED(VERSION 3.12)

SET(PROJECT_NAME "game")
PROJECT(${PROJECT_NAME} LANGUAGES CXX)

SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_VERBOSE_MAKEFILE ON)

IF (NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE Debug)
ENDIF()

IF (EMSCRIPTEN)
  SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -s USE_GLFW=3 ")
  SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -s ASSERTIONS=0 ")
  SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -s WASM=1 ")
  SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} --preload-file ${CMAKE_CURRENT_SOURCE_DIR}/resources@resources ")
  SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -s ALLOW_MEMORY_GROWTH ")
  SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -s EXPORTED_FUNCTIONS=\"['_main', '_malloc', '_free']\" ")
  SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -s MIN_WEBGL_VERSION=2 ")

  SET(CMAKE_EXECUTABLE_SUFFIX ".js")
  SET(PLATFORM "Web")
ENDIF()

IF (APPLE)
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} "-framework IOKit")
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} "-framework Cocoa")
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} "-framework OpenGL")
ENDIF()

ADD_SUBDIRECTORY(src)
